[gd_scene load_steps=6 format=3 uid="uid://cjt83tvonc67t"]

[ext_resource type="Script" path="res://scripts/Gameplay/GameplayController.gd" id="1_pk7iq"]
[ext_resource type="Script" path="res://scripts/Gameplay/FoodModal.gd" id="2_hb6d8"]
[ext_resource type="Texture2D" uid="uid://la218uulnxoy" path="res://sprites/1.png" id="3_k6ui7"]
[ext_resource type="Script" path="res://scripts/Gameplay/FungusController.gd" id="4_fvaol"]
[ext_resource type="Texture2D" uid="uid://du5jca0xup8ty" path="res://sprites/food.png" id="5_fcqfa"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pk7iq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.52549, 0.407843, 1)

[node name="ActionButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SupplyButton" type="Button" parent="ActionButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.0
offset_top = -557.0
offset_right = -23.0
offset_bottom = -379.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Nutrição"

[node name="HealthButton" type="Button" parent="ActionButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -557.0
offset_right = 453.0
offset_bottom = -379.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
disabled = true
text = "Saúde"

[node name="RegistryButton" type="Button" parent="ActionButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.0
offset_top = -333.0
offset_right = 453.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
disabled = true
text = "Registro"

[node name="FoodModal" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hb6d8")

[node name="Left" type="Button" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.0
offset_top = -702.0
offset_right = -307.0
offset_bottom = -562.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = "<"
flat = true

[node name="Nutrient" type="Label" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -291.0
offset_top = -690.0
offset_right = 291.0
offset_bottom = -557.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Proteína"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Button" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 291.0
offset_top = -702.0
offset_right = 440.0
offset_bottom = -562.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = ">"
flat = true

[node name="VegetalButton" type="Button" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.0
offset_top = -472.0
offset_right = -23.0
offset_bottom = -294.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Vegetal"

[node name="AnimalButton" type="Button" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -472.0
offset_right = 453.0
offset_bottom = -294.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Animal"

[node name="HealthButton" type="Button" parent="FoodModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -221.0
offset_right = 144.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
disabled = true
text = "Saúde"

[node name="HealthModal" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TemperatureButton" type="Button" parent="HealthModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.0
offset_top = -589.0
offset_right = -23.0
offset_bottom = -411.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Temperatura"

[node name="HumidityButton" type="Button" parent="HealthModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -589.0
offset_right = 453.0
offset_bottom = -411.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Umidade"

[node name="SupplyButton" type="Button" parent="HealthModal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -221.0
offset_right = 144.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Alimentação"

[node name="Fungus" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -356.0
offset_right = 176.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k6ui7")
script = ExtResource("4_fvaol")

[node name="FoodBalloon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 595.0
offset_top = 221.0
offset_right = 1050.0
offset_bottom = 654.0
texture = ExtResource("5_fcqfa")

[node name="Food" type="Label" parent="."]
layout_mode = 1
offset_left = 84.0
offset_top = 57.0
offset_right = 273.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 70
text = "food:"

[node name="Food Value" type="Label" parent="."]
layout_mode = 1
offset_left = 273.0
offset_top = 57.0
offset_right = 402.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 70
text = "100"

[connection signal="button_up" from="ActionButtons/SupplyButton" to="." method="_on_supply_button_up"]
[connection signal="button_up" from="FoodModal/Left" to="FoodModal" method="_on_previous_nutrient_button_up"]
[connection signal="button_up" from="FoodModal/Right" to="FoodModal" method="_on_next_nutrient_button_up"]
[connection signal="button_up" from="FoodModal/VegetalButton" to="FoodModal" method="_on_vegetal_button_up"]
[connection signal="button_up" from="FoodModal/AnimalButton" to="FoodModal" method="_on_animal_button_up"]
